error.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Scripts\flask.exe\__main__.py", line 6, in <module>
    sys.exit(main())
             ~~~~^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\flask\cli.py", line 1131, in main
    cli.main()
    ~~~~~~~~^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\core.py", line 1406, in main
    rv = self.invoke(ctx)
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\core.py", line 1873, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\core.py", line 1269, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\core.py", line 824, in invoke
    return callback(*args, **kwargs)
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\decorators.py", line 93, in new_func
    return ctx.invoke(f, obj, *args, **kwargs)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\click\core.py", line 824, in invoke
    return callback(*args, **kwargs)
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\flask\cli.py", line 979, in run_command
    raise e from None
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\flask\cli.py", line 963, in run_command
    app: WSGIApplication = info.load_app()  # pyright: ignore
                           ~~~~~~~~~~~~~^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\flask\cli.py", line 353, in load_app
    app = locate_app(import_name, None, raise_if_not_found=False)
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\.venv\Lib\site-packages\flask\cli.py", line 245, in locate_app
    __import__(module_name)
    ~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\app.py", line 18, in <module>
    from rpa_task_processor import process_agendamento_main_task
  File "C:\Users\nivaldo.suave\Desktop\nivaldo\projetos\pessoal\kdosh\vrsRPA\kadosh-rpa\backend\rpa_task_processor.py", line 119
    if config.contato:
IndentationError: unexpected indent
